Fixing video iframes to be responsive.

--- a/src/blog/2011/3/4:39-AM.md
+++ b/src/blog/2011/3/4:39-AM.md
@@ -11,7 +11,9 @@ tags: ["Case Study", "Music", "Memories"]
 
 <div class="info"><b>Note:</b> This article was imported from my old blog, <a href="http://nakedlogic.blogspot.com/2011/03/439-am.html">nakedlogic.blogspot.com</a>.</div>
 
-<iframe width="640" height="360" src="https://www.youtube.com/embed/jc3ZAs17uAg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="resp-container">
+  <iframe class="resp-iframe" width="640" height="360" src="https://www.youtube.com/embed/jc3ZAs17uAg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
 Another little treasure I found in the dead of the night, although I never admit that when I tell someone of my discovery. The discovery seems to be more intimate, and songs like these usually hold more sentimental value to me, since it always brings back good memories.
 
