Finally got the Archive page to work. Had to change article date formats. Worth. Updated featured articles

--- a/src/blog/2011/3/3.14.md
+++ b/src/blog/2011/3/3.14.md
@@ -1,7 +1,7 @@
 ---
 title: 3.14
 description: A day in my life as a high school senior.
-date: March 2011
+date: 2011-03-05
 author: Christofer Padilla
 type: article
 tags: ["Memories"]
@@ -9,7 +9,7 @@ tags: ["Memories"]
 
 # {{ $page.title }}
 
-<div class="info"><b>Note:</b> This article was imported from my old blog, <a href="http://nakedlogic.blogspot.com/2011/03/314.html">nakedlogic.blogspot.com</a>.</div>
+<div class="info"><b>Note:</b> This article was imported from my old blog, <a href="http://nakedlogic.blogspot.com/2011/03/314.html">nakedlogic.blogspot.com</a>. The exact date is unknown, so the day is for chronological order.</div>
 
 ![Pi](/images/pi.jpg)
 
