--- a/src/blog/2017/1/1/RIP-2016-Hello-2017.md
+++ b/src/blog/2017/1/1/RIP-2016-Hello-2017.md
@@ -1,7 +1,7 @@
 ---
 title: RIP 2016 Hello 2017
 description: Reflections on the new year.
-date: Sunday, January 1, 2017
+date: 2017-01-01
 author: Christofer Padilla
 type: article
 tags: ["Goals", "New Year's Resolution"]
