Changing default post type to 'post'. Trying the old rss feed plugin again

--- a/src/blog/2011/3/3.14.md
+++ b/src/blog/2011/3/3.14.md
@@ -3,7 +3,7 @@ title: 3.14
 description: A day in my life as a high school senior.
 date: 2011-03-05
 author: Christofer Padilla
-type: article
+type: post
 tags: ["Memories"]
 ---
 
