--- a/src/blog/2011/3/4:39-AM.md
+++ b/src/blog/2011/3/4:39-AM.md
@@ -3,7 +3,7 @@ title: 4:39 AM
 description: Sometimes I find music I like late at night.
 date: 2011-03-03
 author: Christofer Padilla
-type: article
+type: post
 tags: ["Case Study", "Music", "Memories"]
 ---
 
