--- a/src/blog/2017/1/1/RIP-2016-Hello-2017.md
+++ b/src/blog/2017/1/1/RIP-2016-Hello-2017.md
@@ -3,7 +3,7 @@ title: RIP 2016 Hello 2017
 description: Reflections on the new year.
 date: 2017-01-01
 author: Christofer Padilla
-type: article
+type: post
 tags: ["Goals", "New Year's Resolution"]
 ---
 
